fix(Dialog): make overflow scrollable
this fix is mainly targeted for iphones because whoever owns an iphone knows that the nav bar is on the bottom, so if we dont make it scrollable, it'll look ugly :)

--- a/components/Dialog.module.css
+++ b/components/Dialog.module.css
@@ -40,6 +40,7 @@
     gap: 2rem;
     animation: 0.2s ease-in-out 0s 1 animateDialog;
     outline: 1px solid rgb(85, 85, 85);
+    overflow-y: scroll;
 
     @media (max-width: 980px) {
         width: 90%;
